# KryptosCore

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
docs/: API.md  ARCHITECTURE.md
example/: main.cpp
include/kryptos/: core.h  crypto_utils.h  manager.h
src/: core.cpp  crypto_utils.cpp  manager.cpp
tests/: test_core.cpp
